feat(backend): Added difficulty